--- a/style.css
+++ b/style.css
@@ -1,3 +1,38 @@
+.container {
+  display: grid;
+  grid-template-columns: 4fr 2fr 4fr;
+  justify-items: space-evenly;
+}
+.left{
+  display: grid;
+  justify-items: right;
+  grid-template-columns: 3fr 1fr;
+  grid-column-gap: 20px;
+}
+.middle {
+  justify-items: center;
+  display: grid;
+  font-size: 50px;
+}
+.right {
+  display: grid;
+  justify-items: left;
+  grid-template-columns: 1fr 3fr;
+  grid-column-gap: 20px;
+}
+.points {
+  font-size: 50px;
+}
+.hero, .villan {
+  border: solid grey 1px;
+  box-shadow: 1px 1px 8px gray;
+  text-align: center;
+  padding: 10px;
+  border-radius: 10px;
+}
+.heroes {
+
+}
 .footer{
   margin-left : 80px;
   font-size : 18px;
